# ModelJury-Env

./: .gitignore  Dockerfile  PROJECT_COMPLETION_REPORT.md  README.md  ROUND_1_READINESS_REPORT.py  SUBMISSION_CHECKLIST.md  SUBMISSION_SUMMARY.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_graders.py  test_inference_format.py  test_server.py  verify_score_ranges.py
scripts/: validate-submission.sh
server/: app.py  requirements.txt
server/app/: __init__.py  env.py  grader.py  main.py  models.py  scenarios.py
